@@ -196,6 +196,7 @@
 	* examples/ostest/: Added an environment variable test.
 	* examples/nsh/: Break into several files.
 	* lib/: Added strrchr, basename, dirname
-	* examples/nsh/: Add cp, rm, and rmdir commands
+	* examples/nsh/: Add cp, rm, rmdir, set, unset commands. echo will now print
+	  environment variables.
 	* Started m68322
 
